--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -3,18 +3,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# TD 2: Les structures de contrôle\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 0. Récupération des nouveaux documents\n",
-    "\n",
-    "\n",
-    "Les sujets de TD ainsi que les supports de cours sont publiés en ligne au fur et à mesure sur l'espace github original [https://github.com/uvsq-info/l1-python](https://github.com/uvsq-info/l1-python). Au moment où vous avez fait le fork de cet espace sur votre espace personnel, il est probable que tous les contenus n'étaient pas présents. Pour compléter votre espace, deux solutions sont possibles:\n",
-    "\n",
-    "\n",
-    "1. (solution à privilégier) aller sur la page du projet original [https://github.com/uvsq-info/l1-python](https://github.com/uvsq-info/l1-python), et cliquer sur le bouton vert `Code` en haut à droite. Choisir `download ZIP`, puis extraire l'ensemble des nouveaux fichiers vers votre projet personnel local. Vous pouvez ensuite sauvegarder ces ajouts dans votre espace github personnel en suivant la procédure habituelle.\n",
-    "2. (solution qui présente des risques de conflits entre différentes versions d'un même document) en ligne de commande dans le terminal, en suivant la procédure de la section *Intégrer les mises à jour du projet original* du fichier [README.md](https://github.com/uvsq-info/l1-python/blob/master/README.md#int%C3%A9grer-les-mises-%C3%A0-jour-du-projet-original)\n"
+    "# TD 2: Les structures de contrôle\r\n",
+    "\r\n",
+    "---\r\n",
+    "\r\n",
+    "## 0. Récupération des nouveaux documents\r\n",
+    "\r\n",
+    "\r\n",
+    "Les sujets de TD ainsi que les supports de cours sont publiés en ligne au fur et à mesure sur l'espace github original [https://github.com/uvsq-info/l1-python](https://github.com/uvsq-info/l1-python). Au moment où vous avez fait le fork de cet espace sur votre espace personnel, il est probable que tous les contenus n'étaient pas présents. Pour compléter votre espace, deux solutions sont possibles:\r\n",
+    "\r\n",
+    "\r\n",
+    "1. (solution à privilégier) aller sur la page du projet original [https://github.com/uvsq-info/l1-python](https://github.com/uvsq-info/l1-python), et cliquer sur le bouton vert `Code` en haut à droite. Choisir `download ZIP`, puis extraire l'ensemble des nouveaux fichiers vers votre projet personnel local. Vous pouvez ensuite sauvegarder ces ajouts dans votre espace github personnel en suivant la procédure habituelle.\r\n",
+    "2. (solution qui présente des risques de conflits entre différentes versions d'un même document) en ligne de commande dans le terminal, en suivant la procédure de la section *Intégrer les mises à jour du projet original* du fichier [README.md](https://github.com/uvsq-info/l1-python/blob/master/README.md#int%C3%A9grer-les-mises-%C3%A0-jour-du-projet-original)\r\n"
    ],
    "metadata": {
     "slideshow": {
@@ -25,13 +25,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "---\n",
-    "\n",
-    "## 1. Premiers exercices avec les structures conditionnelles\n",
-    "\n",
-    "**Exercice 1:**\n",
-    "\n",
-    "1. Soit *num1 = 15* et *num2 = 5*. Ecrire un programme qui affiche *Factors!* si l'un des nombres est un facteur de l'autre (c'est-à-dire qu'il divise l'autre nombre). Si aucun des nombres n'est un facteur de l'autre, le programme n'affiche rien.\n",
+    "---\r\n",
+    "\r\n",
+    "## 1. Premiers exercices avec les structures conditionnelles\r\n",
+    "\r\n",
+    "**Exercice 1:**\r\n",
+    "\r\n",
+    "1. Soit *num1 = 15* et *num2 = 5*. Ecrire un programme qui affiche *Factors!* si l'un des nombres est un facteur de l'autre (c'est-à-dire qu'il divise l'autre nombre). Si aucun des nombres n'est un facteur de l'autre, le programme n'affiche rien.\r\n",
     "2. Changer le code que vous avez écrit de telle sorte qu'il affiche toujours *Factors!* si un nombre est un facteur de l'autre, mais qui affiche aussi *Not factors!* si aucun des nombres n'est un facteur de l'autre."
    ],
    "metadata": {
@@ -71,12 +71,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Exercice 2:**\n",
-    "    \n",
-    "Soit *state = \"Georgia\"*. Ecrire un programme qui permet d'afficher un message spécifique en fonction de la variable *state* :  \n",
-    "* \"School isn't cancelled.\" si nous sommes à New Jersey,  \n",
-    "* \"School is postponed.\" si nous sommes à North Carolina,\n",
-    "* \"School is cancelled!\" si nous sommes à Georgia,  \n",
+    "**Exercice 2:**\r\n",
+    "    \r\n",
+    "Soit *state = \"Georgia\"*. Ecrire un programme qui permet d'afficher un message spécifique en fonction de la variable *state* :  \r\n",
+    "* \"School isn't cancelled.\" si nous sommes à New Jersey,  \r\n",
+    "* \"School is postponed.\" si nous sommes à North Carolina,\r\n",
+    "* \"School is cancelled!\" si nous sommes à Georgia,  \r\n",
     "* \"School's status is unknown\" si nous ne sommes pas dans un des trois états précédemment mentionnés."
    ],
    "metadata": {
@@ -117,22 +117,22 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Exercice 3:**\n",
-    "\n",
-    "Ecrire un programme pour découvrir le signe du zodiaque chinois pour une année donnée. Le signe du zodiaque chinois est basé sur un cycle de 12 ans et chaque année de ce cycle est représentée par un animal :\n",
-    "* 0: monkey\n",
-    "* 1: rooster\n",
-    "* 2: dog\n",
-    "* 3: pig\n",
-    "* 4: rat\n",
-    "* 5: ox\n",
-    "* 6: tiger\n",
-    "* 7: rabbit\n",
-    "* 8: dragon\n",
-    "* 9: snake\n",
-    "* 10: horse\n",
-    "* 11: sheep\n",
-    "\n",
+    "**Exercice 3:**\r\n",
+    "\r\n",
+    "Ecrire un programme pour découvrir le signe du zodiaque chinois pour une année donnée. Le signe du zodiaque chinois est basé sur un cycle de 12 ans et chaque année de ce cycle est représentée par un animal :\r\n",
+    "* 0: monkey\r\n",
+    "* 1: rooster\r\n",
+    "* 2: dog\r\n",
+    "* 3: pig\r\n",
+    "* 4: rat\r\n",
+    "* 5: ox\r\n",
+    "* 6: tiger\r\n",
+    "* 7: rabbit\r\n",
+    "* 8: dragon\r\n",
+    "* 9: snake\r\n",
+    "* 10: horse\r\n",
+    "* 11: sheep\r\n",
+    "\r\n",
     "La valeur de l'année % 12 détermine le signe du zodiaque. Par exemple, 1900 est l'année du *rat* puisque 1900 % 12 est 4."
    ],
    "metadata": {
